<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:textSize="30sp"
        android:background="#FF001577"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:text="@string/fragment_1"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/Android1"
                android:src="@drawable/img1"/>

            <ImageView
                android:id="@+id/img2"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/Android2"
                android:src="@drawable/img2"/>

            <ImageView
                android:id="@+id/img3"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/Android3"
                android:src="@drawable/img3"/>

            <ImageView
                android:id="@+id/img4"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/Android4"
                android:src="@drawable/img4"/>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>