<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:textSize="30sp"
        android:background="#FF001577"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:text="@string/zabawa_fragmentami"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/changeFragmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF001577"
            android:text="@string/zmie_fragment"/>

        <Button
            android:id="@+id/showNotificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF001577"
            android:text="@string/poka_powiadomienie"/>

        <LinearLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>

</LinearLayout>