<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="#FF001577"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold"
        android:text="Logowanie" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adres_e_mail"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:minHeight="50sp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/has_o"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:ems="10"
            android:minHeight="50sp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF001577"
            android:text="@string/zaloguj_si" />

    </LinearLayout>
</LinearLayout>